# RAGE

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  UncrustifyRules.txt  compileRAGE  installer_mac.bash  installer_mac.sh  installer_win.bat  installer_win.ps1  uncrustify.cfg
.cursor/rules/: coding_standards.mdc
assets/models/: CubeVertexColored.glb  CubeVertexColored2.glb  CubeVertexColored3.glb  ParentingTest.glb  SimpleCone.glb  SingleChildCubeIcosphere.glb  WideMonkeyHeadVertexColored.glb
docs/: CONTRIBUTING.md
includes/: GLobject.hpp  RAGE.hpp  RAGE_camera.hpp  RAGE_geometry.hpp  RAGE_gui.hpp  RAGE_keyboard_input.hpp  RAGE_material.hpp  RAGE_material_skybox.hpp  RAGE_mesh.hpp  RAGE_object.hpp  RAGE_primitive.hpp  RAGE_primitive_objects.hpp  RAGE_scene.hpp  RAGE_scene_view.hpp  RAGE_shader.hpp  RAGE_skybox_material.cpp  RAGE_skybox_material.hpp  RAGE_texture2D.hpp  RAGE_transform.hpp  RAGE_user_input.hpp  RAGE_window.hpp  ShaderLoader.hpp  app.hpp  buffer_object.hpp  camera.hpp  camera_controls.hpp  command_buffer_recorder.hpp  element_array_buffer.hpp  element_buffer.hpp  event_dispatcher.hpp  event_type.hpp  glsl_shader.hpp  input_handler.hpp  int_vector3.hpp  matrix4.hpp  node3D.hpp  object_buffer.hpp  renderable_node3D.hpp  renderer.hpp  scene.hpp  (+14 more)
includes/gui/: RAGE_gui.hpp  RAGE_inspector.hpp  RAGE_menu_bar.hpp  RAGE_scene_view.hpp
includes/loaders/: GLB_attribute_buffer.hpp  GLB_loader.hpp  GLB_utilities.hpp  RAGE_GLB_loader.hpp
includes/materials/: material.hpp  ray_tracing_material.hpp  renderable_interfaces.hpp  uniform.hpp  voxel_ray_tracing_material.hpp
includes/physics/: RAGE_ray_tracing.hpp
includes/pipelines/: shader_reflector.hpp  vulkan_pipeline.hpp  vulkan_ray_tracing_pipeline.hpp
includes/utils/: buffer_utils.hpp  file_reader.hpp  shader_compiler.hpp
libraries/: CMakeLists.txt
libraries/tracy/public/client/: TracyProfiler.cpp
scripts/: build.ps1  build.sh  check.sh  format.sh  install.sh  lint.sh  test.sh
shaders/: fragment_skybox.glsl  fragment_test.glsl  gradient.comp  test.frag  test.vert  vertex_skybox.glsl  vertex_test.glsl  voxel_ray_tracing_material.rchit  voxel_ray_tracing_material.rgen  voxel_ray_tracing_material.rmiss  voxel_raycast.comp
sources/: GLobject.cpp  RAGE.cpp  RAGE_camera.cpp  RAGE_geometry.cpp  RAGE_gui.cpp  RAGE_keyboard_input.cpp  RAGE_material.cpp  RAGE_material_skybox.cpp  RAGE_mesh.cpp  RAGE_object.cpp  RAGE_primitive.cpp  RAGE_primitive_objects.cpp  RAGE_scene.cpp  RAGE_scene_glb_loader.cpp  RAGE_scene_view.cpp  RAGE_shader.cpp  RAGE_texture2D.cpp  RAGE_transform.cpp  RAGE_window.cpp  app.cpp  buffer_object.cpp  camera.cpp  camera_controls.cpp  command_buffer_recorder.cpp  element_array_buffer.cpp  element_buffer.cpp  input_handler.cpp  int_vector3.cpp  main.cpp  matrix4.cpp  node3D.cpp  object_buffer.cpp  renderable_node3D.cpp  renderer.cpp  scene.cpp  set_callbacks.cpp  set_shader_variable_values.cpp  shader_uniform_callbacks.cpp  uniform_buffer_manager.cpp  utility_functions.cpp  (+10 more)
sources/gui/: RAGE_gui.cpp  RAGE_inspector.cpp  RAGE_menu_bar.cpp  RAGE_scene_view.cpp
sources/loaders/: GLB_attribute_buffer.cpp  GLB_loader.cpp  GLB_utilities.cpp  RAGE_GLB_loader.cpp
sources/materials/: material.cpp  ray_tracing_material.cpp  voxel_ray_tracing_material.cpp
sources/physics/: RAGE_ray_tracing.cpp
sources/pipelines/: shader_reflector.cpp  vulkan_pipeline.cpp  vulkan_ray_tracing_pipeline.cpp
sources/utils/: buffer_utils.cpp  file_reader.cpp  shader_compiler.cpp
src/: ARCHITECTURE.md
src/app/: README.md  async_vox_loader.cpp  async_vox_loader.hpp  build_paths.hpp.in  debug_panel.cpp  debug_panel.hpp  debug_ui.cpp  debug_ui.hpp  demo_scene.cpp  demo_scene.hpp  free_fly_controller.cpp  free_fly_controller.hpp  main.cpp  options.hpp  phase_tracker.cpp  phase_tracker.hpp  player_controller.cpp  player_controller.hpp  profiler.cpp  profiler.hpp  (+4 more)
tests/: CMakeLists.txt
tests/engine/content/: chunk_generators_test.cpp  chunk_store_test.cpp  file_chunk_store_test.cpp  hybrid_chunk_store_test.cpp  streamer_test.cpp  vox_loader_test.cpp
tests/engine/materials/: material_test.cpp
tests/engine/rendering/: frame_context_test.cpp  world_brick_grid_test.cpp  world_grid_test.cpp
tests/engine/scene/: brick_pool_test.cpp  camera_test.cpp  node3d_test.cpp  renderable_node3d_test.cpp  svdag_test.cpp  voxel_data_test.cpp  voxel_occupancy_mip_test.cpp  world_brick_grid_test.cpp
tests/engine/toolkit/collision/: collision_world_test.cpp  voxel_world_query_test.cpp
tests/engine/toolkit/content/: chunk_generators_test.cpp  chunk_store_test.cpp  chunk_streamer_test.cpp  file_chunk_store_test.cpp  hybrid_chunk_store_test.cpp  streamer_test.cpp  vox_loader_test.cpp
tests/engine/toolkit/entity/: kinematic_body_test.cpp
tests/pipelines/: vulkan_pipeline_test.cpp
tests/platform/: process_memory_test.cpp
tests/platform/gpu/: gpu_allocator_test.cpp  gpu_command_test.cpp  mock_gpu.hpp
tests/platform/gpu/mocks/: allocator.hpp  command_pool.hpp  context.hpp  queue.hpp  semaphore_pool.hpp
tests/shared/: histogram_test.cpp  small_vector_test.cpp
tests/shared/math/: color_test.cpp  ivec_test.cpp  mat_test.cpp  quat_test.cpp  vec_test.cpp
tools/: make_sample_vox.cpp
world1/: chunk_-10_0_-1.rgc  chunk_-10_0_-10.rgc  chunk_-10_0_-11.rgc  chunk_-10_0_-12.rgc  chunk_-10_0_-13.rgc  chunk_-10_0_-14.rgc  chunk_-10_0_-15.rgc  chunk_-10_0_-16.rgc  chunk_-10_0_-17.rgc  chunk_-10_0_-18.rgc  chunk_-10_0_-19.rgc  chunk_-10_0_-2.rgc  chunk_-10_0_-20.rgc  chunk_-10_0_-21.rgc  chunk_-10_0_-22.rgc  chunk_-10_0_-23.rgc  chunk_-10_0_-24.rgc  chunk_-10_0_-25.rgc  chunk_-10_0_-26.rgc  chunk_-10_0_-27.rgc  chunk_-10_0_-28.rgc  chunk_-10_0_-29.rgc  chunk_-10_0_-3.rgc  chunk_-10_0_-30.rgc  chunk_-10_0_-31.rgc  chunk_-10_0_-32.rgc  chunk_-10_0_-33.rgc  chunk_-10_0_-34.rgc  chunk_-10_0_-35.rgc  chunk_-10_0_-36.rgc  chunk_-10_0_-4.rgc  chunk_-10_0_-5.rgc  chunk_-10_0_-6.rgc  chunk_-10_0_-7.rgc  chunk_-10_0_-8.rgc  chunk_-10_0_-9.rgc  chunk_-10_0_0.rgc  chunk_-10_0_1.rgc  chunk_-10_0_10.rgc  chunk_-10_0_11.rgc  (+7902 more)
(+160 files in other folders)
